<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/white"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitStart"
        android:src="@drawable/music" />

    <TextView
        android:id="@+id/search_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/picture"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/tv_artist_name"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_notice"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:gravity="center"
        android:hint="@string/et_hint"
        android:imeOptions="actionDone"
        android:maxLines="1" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_search_bar"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/black_rounded_button"
        android:onClick="onSearchButtonClicked"
        android:text="@string/search"
        android:textColor="#ffffff" />


</RelativeLayout>

